--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
 </head>
 <body>
-    
+    <div class="background"> 
+        <header>
+            <div class="logo">
+                <i class="fa-solid fa-p"></i>
+            </div>
+
+        </header>
+    </div><!--background-->
 </body>
-</html>
+</html> 
