--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="background"> 
@@ -12,8 +13,37 @@
             <div class="logo">
                 <i class="fa-solid fa-p"></i>
             </div>
+            <div class="cabecalho-link">
+                <li>
+                    <a href="">Home</a>
+                </li>
+                <li>
+                    <a href="">Sobre</a>
+                </li>
+                <li>
+                    <a href=" https://pedrocoutoo.github.io/projeto-android/">Projetos</a>
+                </li>
+                <li>
+                    <a href="">Contato</a>
+                </li>
+                <button><a href="https://contate.me/pedrocouto01" target="_blank">Meu Contato</a></button>
+            </div>
 
         </header>
+        <div class="container-text">
+            <div class="text">
+                <h3> Olá,pessoal </h3>
+                <h1>Eu sou <span>Pedro Couto</span></h1>
+                <p>Sou um programador junior e esse é <br>meu portifolio </p>
+                <div class="redes">
+                    <a href="https://www.facebook.com/profile.php?id=100005017594816" target="_blank"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="https://github.com/PedroCoutoo" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    <a href="#"><i class="fa-solid fa-envelope"></i></a>
+                    <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                </div>
+                <button class="btn">Sobre Mim</button>
+            </div>
+        </div>
     </div><!--background-->
 </body>
 </html> 
